# fluxer

./: AGENTS.md  Cargo.toml  README.md  SECURITY.md  Taskfile.yml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: Dockerfile  docker-compose.yml
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: _build-image.yaml  build-admin.yaml  build-api.yaml  build-app-proxy-self-hosted.yaml  build-app-proxy.yaml  build-desktop.yaml  build-docs.yaml  build-gateway.yaml  build-gifs.yaml  build-marketing.yaml  build-media-proxy.yaml  build-messages.yaml  build-snowflakes.yaml  build-static.yaml  build-unfurl.yaml  build-updater.yaml  build-users.yaml  codeql.yaml  dart-sdk-validation.yaml  finalise-release.yaml  release-all.yaml  tests.yaml
config/env/: development.env  local.env.example  local.env.native-host
deploy/self-hosting/: .env.example  Caddyfile  backup-data.sh  docker-compose.yml  (+5 more)
fluxer_admin/: Dockerfile  openapi-admin.json
fluxer_api/: Dockerfile  package.json  vitest.postgres-integration.config.ts
fluxer_app/: index.html  package.json  rspack.config.mjs  vitest.config.ts
fluxer_app_proxy/: Dockerfile  docker-bake.hcl
fluxer_desktop/: electron-builder.config.cjs  package.json
fluxer_docs/: .gitignore  Dockerfile  serve.sh  zensical.toml
fluxer_marketing/: Dockerfile  package.json
fluxer_updater/: Cargo.toml  Dockerfile
fluxer_updater/src/: compose.rs  config.rs  main.rs
plans/: invidious-support.md  soundboard-voice-chat.md
scripts/: fill-missing-i18n.mjs
(+399 files in other folders)
